Fix auto-invert not applying in manually-selected dark mode

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -149,3 +149,31 @@ a.settings-btn {
         border: 1px solid var(--line-color-light);
     }
 }
+
+// Invert while trying to preserve color hue.
+@mixin img-invert {
+    filter: invert(1) hue-rotate(180deg);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root:not(.lightTheme) main img.auto-invert {
+        @include img-invert;
+    }
+}
+
+:root.darkTheme main img.auto-invert {
+    @include img-invert;
+}
+
+// Users can `include' this to invert images automatically in dark mode.
+@mixin auto-invert-images {
+    @media (prefers-color-scheme: dark) {
+        :root:not(.lightTheme) main img:not(.no-invert) {
+            @include img-invert;
+        }
+    }
+
+    :root.darkTheme main img:not(.no-invert) {
+        @include img-invert;
+    }
+}
