--- a/assets/style.scss
+++ b/assets/style.scss
@@ -6,10 +6,6 @@ styles: true
 @import "hematite";
 
 {% if site.hematite.auto_invert_imgs %}
-// Auto-invert images in dark mode!
-@media (prefers-color-scheme: dark) {
-    main img:not(.no-invert) {
-        filter: invert(1) hue-rotate(180deg);
-    }
-}
+// In dark mode, invert the brightness of images
+@include auto-invert-images;
 {% endif %}
